--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,27 @@
-body {
-  div {
-    background: blue;
+// The contents of this file shoudl be removed during development
+
+html {
+  body {
+    background-color: black;
+    color: white;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .web-assassin-title {
+      text-align: center;
+      margin-top: 2rem;
+      font-family: fantasy;
+    }
+
+    .web-assassin-alpinejs-status {
+      display: block;
+      text-align: center;
+      margin-top: 1rem;
+      font-family: monospace;
+    }
   }
 }
