--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,8 +2,7 @@
 
 html {
   body {
-    background-color: black;
-    color: white;
+    background-color: white;
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -13,7 +12,6 @@ html {
 
     .web-assassin-title {
       text-align: center;
-      margin-top: 2rem;
       font-family: fantasy;
     }
 
@@ -22,6 +20,17 @@ html {
       text-align: center;
       margin-top: 1rem;
       font-family: monospace;
+    }
+
+    .web-assassin-spruce-status {
+      display: block;
+      text-align: center;
+      margin-top: .5rem;
+      font-family: monospace;
+    }
+
+    a {
+      margin-top: 1rem;
     }
   }
 }
